# simple-cpp-thread-pool

./: .gitignore  CMakeLists.txt  README.md
src/: task.cpp  task.h
src/impl/: thread_pool.cpp  thread_pool.h
tests/: test.cpp
