cmake_minimum_required(VERSION 3.10)
project(ThreadPool)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE SOURCES src/*.cpp src/impl/*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/src/impl)

if(CTP_BUILD_TESTING)
    enable_testing()
    file(GLOB_RECURSE TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp)
    add_executable(thread_pool_tests ${TEST_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp)
    set(CATCH2_HEADER_URL "https://github.com/catchorg/Catch2/releases/download/v2.13.10/catch.hpp")
    set(CATCH2_HEADER_LOCAL ${CMAKE_BINARY_DIR}/third_party)
    file(DOWNLOAD ${CATCH2_HEADER_URL} ${CATCH2_HEADER_LOCAL}/catch.hpp)
    add_dependencies(thread_pool_tests ${PROJECT_NAME})
    target_link_libraries(thread_pool_tests PRIVATE ${PROJECT_NAME})
    target_include_directories(thread_pool_tests PRIVATE ${CATCH2_HEADER_LOCAL})
    add_test(NAME UnitTests COMMAND thread_pool_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
endif()